attempt to fix jumping on small screens

--- a/client/src/components/styles/App.scss
+++ b/client/src/components/styles/App.scss
@@ -37,7 +37,7 @@ body {
   margin-top: 2rem;
   // margin-left: 5vw;
   // margin-right: 15vw;
-  width: 90%;
+  width: 100%;
   top: 16vh;
   display: grid;
   grid-template-columns: 1fr;
